# mi48dx-serial-driver

./: .gitignore  CMakeLists.txt  Makefile  README.md  THERMAL_VISUALIZATION.md  build.sh  install.sh  main.cpp  serial_mi48.cpp  serial_mi48.hpp  serial_mi84.cpp  thermal_visualization.cpp  thermal_visualization.hpp  uninstall.sh  version.hpp
examples/: README.md  advanced_display.cpp  dual_camera.cpp  dual_camera_calibration.ini  dual_camera_calibration_example.ini  enhanced_display.cpp  multi_palette_display.cpp  raw_display.cpp  simple_display.cpp
